+ screenshots blocks of AI

--- a/app_inventor/ai1book.tex
+++ b/app_inventor/ai1book.tex
@@ -52,8 +52,11 @@
 \usepackage{amsthm, amsmath, amssymb}
 %\usepackage{setspace, enumerate}
 
+\usepackage[linesnumbered,boxed]{algorithm2e}
+\newcommand{\var}{\texttt} % for names of variables in plain text https://tex.stackexchange.com/a/381105/99685
+
 \theoremstyle{definition}
-\newtheorem{task}{}
+\newtheorem{task}{} % numbering of tasks in the section: Answers
 
 %%
 % Book metadata
