--- a/app_inventor/ai1book.tex
+++ b/app_inventor/ai1book.tex
@@ -321,7 +321,7 @@ and the use of the \doccls{tufte-book} and \doccls{tufte-handout} document class
 \mainmatter
 
 
-\input{./chapter/change_flags_AKA.tex}
+%\input{./chapter/change_flags_AKA.tex}
 \input{./chapter/guess_the_number_Oksanche.tex}
 \input{./chapter/from_0_to_100_Gr3zjd.tex}
 
@@ -881,7 +881,7 @@ existing commands for letterspacing.
 
 When setting strings of \allcaps{ALL CAPS} or \smallcaps{small caps}, the
 letter\-spacing---that is, the spacing between the letters---should be
-increased slightly.\cite{Bringhurst2005}  The \doccmddef{allcaps} command has proper letterspacing for
+increased slightly.  The \doccmddef{allcaps} command has proper letterspacing for
 strings of \allcaps{FULL CAPITAL LETTERS}, and the \doccmddef{smallcaps} command
 has letterspacing for \smallcaps{small capital letters}.  These commands
 will also automatically convert the case of the text to upper- or
