--- a/app_inventor/ai1book.tex
+++ b/app_inventor/ai1book.tex
@@ -321,7 +321,7 @@ and the use of the \doccls{tufte-book} and \doccls{tufte-handout} document class
 \mainmatter
 
 
-%\input{./chapter/change_flags_AKA.tex}
+\input{./chapter/change_flags_AKA.tex}
 \input{./chapter/guess_the_number_Oksanche.tex}
 \input{./chapter/from_0_to_100_Gr3zjd.tex}
 
