+ lesson db GoogleFusion and Kamriani book ref

--- a/app_inventor/ai1book.tex
+++ b/app_inventor/ai1book.tex
@@ -320,6 +320,8 @@ and the use of the \doccls{tufte-book} and \doccls{tufte-handout} document class
 % Start the main matter (normal chapters)
 \mainmatter
 
+\input{./lessons/database.tex}
+\input{./lessons/db_google_fusion.tex}
 
 \input{./chapter/change_flags_AKA.tex}
 \input{./chapter/guess_the_number_Oksanche.tex}
