--- a/app_inventor/ai1references.bib
+++ b/app_inventor/ai1references.bib
@@ -18,6 +18,16 @@
 }
 
 
+@BOOK{KamrianiAndRoy2016,
+	author = {Kamriani F. and Roy K.},
+	title = {App Inventor~2 Essentials},
+	publisher = {Packt},
+	year = {2016},
+} 
+% |страниц = 246
+% isbn = {978-1785281105}
+
+
 @misc{WDNationalFlags,
   author = {Викиданные},
   title = {Список государственных флагов},
