about one and a half of letter

--- a/app_inventor/lessons/db_google_fusion.tex
+++ b/app_inventor/lessons/db_google_fusion.tex
@@ -48,7 +48,7 @@
 \end{figure}
 
 В строке поиска нового окна наберите слово ``Fusion''. Нажмите кнопку поиска. 
-Из списка приложений выберите ``Fusion Tables'' и нажмите кнопку <<ПОДКЛЮЧИТЬ>> 
+Из списка приложений выберите ``Fusion Tables'' и нажмите кнопку <<Подключить>> 
 (рис.~\ref{fig:add_fusion_to_drive}).
 
 \begin{figure}
@@ -59,7 +59,7 @@
 }%
     \caption[Выбор приложения в Google Диск.][-0pt]{Выбор приложения 
             ``Fusion Tables'' в Google Диск. У кнопки <<Подключить>> 
-            на экране поместилось полторы буквы <<ПО>>.
+            на экране поместились первые полторы буквы.
 
         { Если даже у Гугля на картинке есть опечатки, то какой может быть 
         спрос с авторов этой книги $\ddot\smile$
@@ -82,3 +82,5 @@
     }
   \label{fig:fusion_is_available_at_drive}
 \end{figure}
+
+Щёлкнем по кнопке <<Google Сводные таблицы>>, чтобы создать новую таблицу.
