+ text without pics about google fusion tables

--- a/app_inventor/lessons/db_google_fusion.tex
+++ b/app_inventor/lessons/db_google_fusion.tex
@@ -84,3 +84,21 @@
 \end{figure}
 
 Щёлкнем по кнопке <<Google Сводные таблицы>>, чтобы создать новую таблицу.
+
+Откроется новое окно (рис. 050\_create\_empty\_table.png). Выберите пункт 
+"Create empty table" для создания новой пустой таблицы.
+
+
+\section{Закладка (данных) ДинамиТа}
+
+Ну вот, наконец, мы добрались до табличной формы, где можно вводить данные в ДинамиТ или Google Сводные таблицы.
+
+Первым делом дадим таблице название и описание (см. рис. 060\_table\_name.png). 
+Таблица будет называться ``FlagColor Table''. Затем нажмите кнопку ``Save'', чтобы сохранить название.
+
+\newthought{О пустоте}. Нужна ещё пара штрихов, прежде чем мы сможем использовать эту таблицу в нашем приложении. 
+Изначально при создании таблицы в неё вставляется одна пустая строка, а нам нужна совершенно пустая таблицу. Как очистить таблицу? 
+Для этого выберите пункт меню ``Edit'', затем ``Delete all rows'' (см. рис. 070\_Edit\_delete\_all\_rows\_to\_clear\_table.png). 
+На вопрос -- уверены ли вы, что нужно всё удалить? -- ответьте утвердительно (см. рис. 080\_yes\_delete\_all\_rows.png).
+
+
