+ book link Wolber 2011

--- a/app_inventor/lessons/db_google_fusion.tex
+++ b/app_inventor/lessons/db_google_fusion.tex
@@ -20,7 +20,7 @@
         и связываем свойство KeyFile с этим файлом. 
         Наконец, в Дизайнере ставим галочку на пункт ``UseServiceAuthentication''. 
         В случае использования Service Account 
-        пользователям не нужно заботиться о логине в ДинамиТ, 
+        пользователям не нужно заботиться о логине в ДинамиТе, 
         все эти заботы берёт на себя приложение.
 \end{itemize}
 
@@ -31,7 +31,7 @@
 
 
 Откройте веб-страницу Google Диска (https://drive.google.com).\marginnote[-0cm]{
-    Чтобы получить доступ к Google Диску, достаточно зарегистрироваться на сайте Google.
+    Чтобы получить доступ к Google Диску, достаточно зарегистрироваться на сайте \href{https://www.google.com/}{Google.com}.
 }
 Нажмите последовательно 
 кнопки меню: <<Создать>>, <<Ещё>> и~кнопку <<+ Подключить другие приложения>> 
@@ -71,8 +71,9 @@
   \label{fig:add_fusion_to_drive}
 \end{figure}
 
-Теперь, если ещё раз нажать кнопки <<Создать>> и <<Ещё>>, в~списке меню будут 
+Теперь, если снова нажать кнопки <<Создать>> и <<Ещё>>, в~списке меню будут 
 <<Google Сводные таблицы>> (рис.~\ref{fig:fusion_is_available_at_drive}).
+Щёлкнем по кнопке <<Google Сводные таблицы>>, чтобы создать новую таблицу.
 
 \begin{figure}
 {%
@@ -86,17 +87,15 @@
   \label{fig:fusion_is_available_at_drive}
 \end{figure}
 
-Щёлкнем по кнопке <<Google Сводные таблицы>>, чтобы создать новую таблицу.
-
 Откроется новое окно (рис.~\ref{fig:fusion_create_empty_table}). Выберите пункт 
 ``Create empty table'' для создания новой пустой таблицы.
 
 \begin{figure}
-{%
+{
 \setlength{\fboxsep}{0pt}%
 \setlength{\fboxrule}{1pt}%
 \fcolorbox{gray}{gray}{\includegraphics{./lessons/db_google_fusion/050_create_empty_table.png}}%
-}%
+}
     \caption[Создание новой Google Сводной таблицы.][0pt]{Создание новой 
             Google Сводной таблицы (Fusion Table).
 
@@ -114,12 +113,31 @@
 \end{figure}
 
 
+
+
 \section{Закладка (данных) ДинамиТа}
 
-Ну вот, наконец, мы добрались до табличной формы, где можно вводить данные в ДинамиТ или Google Сводные таблицы.
+Ну вот, наконец, мы добрались до табличной формы, 
+где можно вводить данные в ДинамиТ или Google Сводные таблицы.
 
-Первым делом дадим таблице название и описание (см. рис. 060\_table\_name.png). 
+Первым делом дадим таблице название и описание (рис.~\ref{fig:fusion_table_name}). 
 Таблица будет называться ``FlagColor Table''. Затем нажмите кнопку ``Save'', чтобы сохранить название.
+
+\begin{figure}
+{
+\setlength{\fboxsep}{0pt}%
+\setlength{\fboxrule}{1pt}%
+\fcolorbox{gray}{gray}{\includegraphics{./lessons/db_google_fusion/060_table_name.png}}
+}
+    \caption[Переименование Google Сводной таблицы.][0pt]{Именование новой 
+            Google Сводной таблицы (Fusion Table).
+
+            { 
+            }
+    }
+  \label{fig:fusion_table_name}
+\end{figure}
+
 
 \newthought{О пустоте}. Нужна ещё пара штрихов, прежде чем мы сможем использовать эту таблицу в нашем приложении. 
 Изначально при создании таблицы в неё вставляется одна пустая строка, а нам нужна совершенно пустая таблицу. Как очистить таблицу? 
