--- a/app_inventor/ai1references.bib
+++ b/app_inventor/ai1references.bib
@@ -17,13 +17,20 @@
 	isbn = {0-201-36299-6}
 }
 
+@book{Wolber2011,
+  title={App Inventor},
+  author={Wolber, David and Abelson, Hal and Spertus, Ellen and Looney, Liz},
+  year={2011},
+  publisher={O'Reilly Media}
+}
 
 @BOOK{KamrianiAndRoy2016,
-	author = {Kamriani F. and Roy K.},
+	author = {Kamriani, Felicia and Roy, Krishnendu},
 	title = {App Inventor~2 Essentials},
 	publisher = {Packt},
 	year = {2016},
 } 
+% {Kamriani F. and Roy K.}
 % |страниц = 246
 % isbn = {978-1785281105}
 
