--- a/app_inventor/lessons/database.tex
+++ b/app_inventor/lessons/database.tex
@@ -3,8 +3,8 @@
 
 \newthought{App Inventor поддерживает работу} с онлайн базами данных. 
 И база TinyWebDB, и база данных 
-Google Fusion Tables (<<ДинамиТ>> 
-\footnote[][-0.5cm]{
+Google Fusion Tables (<<ДинамиТ>>% 
+\footnote[][-1.0cm]{
         Google Fusion Tables в русском интерфейсе среды App Inventor называется 
         ужасно длинно: <<УправлениеДинамическимиТаблицами>>, 
         будем эту базу данных называть просто и взрывно -- <<ДинамиТ>>. 
@@ -13,10 +13,27 @@ Google Fusion Tables (<<ДинамиТ>>
 но любой, кто получит доступ к базе, может изменить её содержимое. 
 Несмотря на название, база ДинамиТа более безопасна, но сложнее в освоении. 
 
+Великолепная четвёрка в 2011 году написала о работе с базами данных 
+TinyDB и TinyWebDB\cite{Wolber2011}. 
+\marginnote[-0cm]{
+    В книге 2011 года этим базам посвящена целая глава, доступная онлайн: 
+    \href{http://www.appinventor.org/bookChapters/chapter22.pdf}{Working with Databases}.
+}
 В книге, написанной Камриани и Роем\cite{KamrianiAndRoy2016}, 
 рассказывается о работе с базой данных ДинамиТ. 
 
-\begin{marginfigure}[-0em]
+Чтобы добраться до элементов баз данных в среде App Inventor, 
+нажмите кнопку <<Дизайнер>>. 
+Затем в меню <<Палитры>> разверните панель <<Хранилище>> и увидите 
+список доступных способов долговременного хранения данных (рис.~\ref{fig:storage_and_db_types}): 
+\begin{itemize}
+    \item Файл,
+    \item УправлениеДинамическимиТаблицами,
+    \item TinyDB,
+    \item TinyWebDB.
+\end{itemize}
+
+\begin{marginfigure}[0.3cm]
 {%
 \setlength{\fboxsep}{0pt}%
 \setlength{\fboxrule}{1pt}%
@@ -28,25 +45,16 @@ Google Fusion Tables (<<ДинамиТ>>
 \label{fig:storage_and_db_types}
 \end{marginfigure}
 
-Чтобы добраться до элементов баз данных в среде App Inventor, 
-нажмите кнопку <<Дизайнер>>. 
-Затем в меню <<Палитры>> разверните панель <<Хранилище>> и увидите 
-список доступных способов долговременного хранения данных (рис.~\ref{fig:storage_and_db_types}): 
-\begin{itemize}
-\item Файл,
-\item УправлениеДинамическимиТаблицами,
-\item TinyDB,
-\item TinyWebDB.
-\end{itemize}
-
-Справа от названия типа хранилища есть значок вопроса. 
-Если на него нажать, то всплыёт окно с подсказкой и рассказом, 
+Справа от названия типа хранилища есть значок вопроса (рис.~\ref{fig:storage_and_db_types}). 
+Если нажать на значок, то всплыёт окно с подсказкой и рассказом, 
 что это за база и как с ней работать.
 
 Вопросы (todo answers and goto links): 
 \begin{itemize}
-\item Почему переменная называется <<переменной>> или по-английски ``variable''?
-\item Кто дольше живёт ‒ переменная или константа? (упомянуть рассказ Лема о роботе-дубликате, 
+    \item Назовите сайты и программы, которым необходима для работы база данных.
+    \item Почему переменная называется <<переменной>> или по-английски ``variable''? 
+        Данные в базе являются переменными или константами?
+    \item Кто дольше живёт ‒ переменная или константа? (упомянуть рассказ Лема о роботе-дубликате, 
     который симулировал работу, чтобы его не выключили)
-\item Зачем хранить данные в базе данных, если уже есть переменные?
+    \item Зачем хранить данные в базе данных, если уже есть переменные?
 \end{itemize}
