+ epigraph and google fusion tables

--- a/app_inventor/ai1book.tex
+++ b/app_inventor/ai1book.tex
@@ -2,11 +2,16 @@
 
 \usepackage{cmap}
 
-\usepackage[T1]{fontenc}
+% source tufte-latex
+%\usepackage[T1]{fontenc}
+%\usepackage[english,russian]{babel}
+%\usepackage[utf8]{inputenc}
 
-\usepackage[english,russian]{babel}
-
+% new, see https://tex.stackexchange.com/a/333416
+\usepackage[T2A]{fontenc}
 \usepackage[utf8]{inputenc}
+\usepackage[english, russian]{babel}
+\usepackage[scaled=.85]{PTMono}
 
 \renewcommand{\rmdefault}{cmr}
 
