chapter fusion tables

--- a/app_inventor/lessons/db_google_fusion.tex
+++ b/app_inventor/lessons/db_google_fusion.tex
@@ -10,9 +10,10 @@
 
 Программы, работающие с ДинамиТом, должны получить разрешение у сервера Гугл, то есть должны указать логин и пароль. Есть два варианта:
 \begin{itemize}
-    \item Разработчик приложения получает API Key и использует его в программе. 
-        Но пользователю программы тогда тоже нужно залогиниться для доступа к ДинамиТу. 
-    \item Использовать Service Account. Тогда нужно создать 
+    \item Разработчик приложения получает секретный ключ (API Key) и использует его в программе. 
+        В этом случае пользователю программы тоже нужно залогиниться в Google для доступа к ДинамиТу. 
+
+    \item Можно использовать Service Account. Тогда нужно создать 
         файл с логином и паролем (это наш секретный ключик) и получить 
         мейл ``Service Account Email Address'' из Google APIs Console. 
         Затем сообщаем ДинамиТу мейл ``Service Account Email Address'' 
@@ -121,27 +122,62 @@
 где можно вводить данные в ДинамиТ или Google Сводные таблицы.
 
 Первым делом дадим таблице название и описание (рис.~\ref{fig:fusion_table_name}). 
-Таблица будет называться ``FlagColor Table''. Затем нажмите кнопку ``Save'', чтобы сохранить название.
+Таблицу назовём ``FlagColor Table''. После ввода текста нажмите кнопку ``Save'', 
+чтобы сохранения данных.
 
-\begin{figure}
+\begin{marginfigure}[0.0cm]
 {
 \setlength{\fboxsep}{0pt}%
 \setlength{\fboxrule}{1pt}%
 \fcolorbox{gray}{gray}{\includegraphics{./lessons/db_google_fusion/060_table_name.png}}
 }
-    \caption[Переименование Google Сводной таблицы.][0pt]{Именование новой 
-            Google Сводной таблицы (Fusion Table).
-
-            { 
-            }
-    }
+    \caption{Переименование новой Google Сводной таблицы (Fusion Table).}
   \label{fig:fusion_table_name}
-\end{figure}
+\end{marginfigure}
 
 
 \newthought{О пустоте}. Нужна ещё пара штрихов, прежде чем мы сможем использовать эту таблицу в нашем приложении. 
-Изначально при создании таблицы в неё вставляется одна пустая строка, а нам нужна совершенно пустая таблицу. Как очистить таблицу? 
-Для этого выберите пункт меню ``Edit'', затем ``Delete all rows'' (см. рис. 070\_Edit\_delete\_all\_rows\_to\_clear\_table.png). 
-На вопрос -- уверены ли вы, что нужно всё удалить? -- ответьте утвердительно (см. рис. 080\_yes\_delete\_all\_rows.png).
+Изначально, при создании таблицы, в неё вставляется одна пустая строка, а нам нужна совершенно пустая таблицу. Как очистить таблицу? 
+Для этого выберите пункт меню ``Edit'', затем ``Delete all rows'' (рис.~\ref{fig:fusion_table_delete_all_rows}). 
+На вопрос -- уверены ли вы, что нужно всё удалить? -- ответьте утвердительно (рис.~\ref{fig:fusion_table_yes_delete_all_rows}).
+
+\begin{figure}
+{
+\setlength{\fboxsep}{0pt}%
+\setlength{\fboxrule}{1pt}%
+\fcolorbox{gray}{gray}{\includegraphics{./lessons/db_google_fusion/070_Edit_delete_all_rows_to_clear_table.png}}
+}
+    \caption[Очистка Сводной таблицы.][0pt]{Удаление всех строк для очистки таблицы.
+            {
+                Пункты меню ``Edit'', затем ``Delete all rows''.
+            }
+    }
+  \label{fig:fusion_table_delete_all_rows}
+\end{figure}
+
+
+\begin{marginfigure}[0.0cm]
+{%
+\setlength{\fboxsep}{0pt}%
+\setlength{\fboxrule}{1pt}%
+\fcolorbox{gray}{gray}{\includegraphics{./lessons/db_google_fusion/080_yes_delete_all_rows.png}}%
+}%
+%\includegraphics{./commons/Flag_of_Republika_Srpska.png}
+    \caption{Подтверждение удаления всех строк таблицы.}
+\label{fig:fusion_table_yes_delete_all_rows}
+\end{marginfigure}
+
+
+\newthought{К вводу данных} можно уже и приступить. 
+Определим для себя, какие столбцы нам нужны для использования таблицы 
+в главе \ref{ch:draughts-moves} <<Превращение флагов>> (с.~\pageref{ch:draughts-moves}).
+
+Текстовое поле для названия страны (например, ``Russia'', ``Gabon''). 
+
+Числовое поле для указания номера полоски цвета, считаем сверху вниз, отсчёт начинаем с единицы.
+
+Числовое? поле для указания RGB-цвета.
+
+Текстовое поле для названия цвета. Комментарий с названием цвета для RGB-кода.
 
 
