Guess_Numbers: + template of annotation (task10); + task 8-9; + task 11  (added a new task in the chapter);

--- a/app_inventor/ai1book.tex
+++ b/app_inventor/ai1book.tex
@@ -12,6 +12,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[english, russian]{babel}
 \usepackage[scaled=.85]{PTMono}
+\usepackage{indentfirst} % red entries
 
 \renewcommand{\rmdefault}{cmr}
 
