--- a/app_inventor/ai1references.bib
+++ b/app_inventor/ai1references.bib
@@ -30,6 +30,16 @@
 	publisher = {Packt},
 	year = {2016},
 } 
+
+@BOOK{Galanin,
+	author = {Галанин Д. Д.},
+	title = { Леонтий Филиппович Магницкий и его арифметика.y},
+	publisher = {Типография О. Л. Сомовой},
+	year = {1914},
+	edition = {2—3},
+	isbn = {978-5-458-27244-5}
+}
+
 % {Kamriani F. and Roy K.}
 % |страниц = 246
 % isbn = {978-1785281105}
@@ -41,3 +51,18 @@
   year = {2018},
   howpublished = {\url{http://bit.ly/2OgIdWo}}
 }
+
+@misc{MitManyScreens,
+  author = {Mit App Inventor},
+  title = {Building Apps with many Screens},
+  year = {2012},
+  howpublished = {\url{http://ai2.appinventor.mit.edu/reference/other/manyscreens.html}}
+}
+
+@misc{PanfilovaApp,
+  author = {Панфилова О.С.},
+  title = {Программа "Угадыватель чисел"},
+  year = {2018},
+  howpublished = {\url{http://ai2.appinventor.mit.edu/?locale=en&galleryId=4596770871050240}}
+}
+Крижановский А.А. Программа "Превращение флагов"
