+ set space package

--- a/app_inventor/ai1book.tex
+++ b/app_inventor/ai1book.tex
@@ -14,6 +14,9 @@
 \usepackage[scaled=.85]{PTMono}
 \usepackage{indentfirst} % red entries
 
+\usepackage{setspace} % see https://tex.stackexchange.com/a/77910/99685
+% \begin{spacing}{2.5} ... \end{spacing}
+
 \renewcommand{\rmdefault}{cmr}
 
 \renewcommand{\sfdefault}{cmss}
