+ language in bib file

--- a/app_inventor/ai1references.bib
+++ b/app_inventor/ai1references.bib
@@ -1,5 +1,6 @@
 
 @BOOK{Bringhurst2005,
+    language = {english},
 	author = {Robert Bringhurst},
 	title = {The Elements of Typography},
 	publisher = {Hartley \& Marks},
@@ -9,6 +10,7 @@
 }
 
 @BOOK{Mittelbach2004,
+    language = {english},
 	author = {Frank Mittelbach and Michel Goossens},
 	title = {The \LaTeX\ Companion},
 	publisher = {Addison--Wesley},
@@ -18,13 +20,15 @@
 }
 
 @book{Wolber2011,
-  title={App Inventor},
-  author={Wolber, David and Abelson, Hal and Spertus, Ellen and Looney, Liz},
-  year={2011},
-  publisher={O'Reilly Media}
+    language = {english},
+    title={App Inventor},
+    author={Wolber, David and Abelson, Hal and Spertus, Ellen and Looney, Liz},
+    year={2011},
+    publisher={O'Reilly Media}
 }
 
 @BOOK{KamrianiAndRoy2016,
+    language = {english},
 	author = {Kamriani, Felicia and Roy, Krishnendu},
 	title = {App Inventor~2 Essentials},
 	publisher = {Packt},
@@ -32,12 +36,13 @@
 } 
 
 @BOOK{Galanin,
+    language = {russian},
 	author = {Галанин Д. Д.},
-	title = { Леонтий Филиппович Магницкий и его арифметика.y},
+	title = {Леонтий Филиппович Магницкий и его арифметика},
 	publisher = {Типография О. Л. Сомовой},
 	year = {1914},
-	edition = {2—3},
-	isbn = {978-5-458-27244-5}
+%	??? edition = {2-3},
+%	??? isbn = {978-5-458-27244-5}
 }
 
 % {Kamriani F. and Roy K.}
@@ -46,23 +51,26 @@
 
 
 @misc{WDNationalFlags,
-  author = {Викиданные},
-  title = {Список государственных флагов},
-  year = {2018},
-  howpublished = {\url{http://bit.ly/2OgIdWo}}
+    language = {russian},
+    author = {Викиданные},
+    title = {Список государственных флагов},
+    year = {2018},
+    howpublished = {\url{http://bit.ly/2OgIdWo}}
 }
 
 @misc{MitManyScreens,
-  author = {Mit App Inventor},
-  title = {Building Apps with many Screens},
-  year = {2012},
-  howpublished = {\url{http://ai2.appinventor.mit.edu/reference/other/manyscreens.html}}
+    language = {english},
+    author = {Mit App Inventor},
+    title = {Building Apps with many Screens},
+    year = {2012},
+    howpublished = {\url{http://ai2.appinventor.mit.edu/reference/other/manyscreens.html}}
 }
 
 @misc{PanfilovaApp,
-  author = {Панфилова О.С.},
-  title = {Программа "Угадыватель чисел"},
-  year = {2018},
-  howpublished = {\url{http://ai2.appinventor.mit.edu/?locale=en&galleryId=4596770871050240}}
+    language = {russian},
+    author = {Панфилова О.С.},
+    title = {Программа <<Угадыватель чисел>>},
+    year = {2018},
+    howpublished = {\url{http://ai2.appinventor.mit.edu/?locale=en&galleryId=4596770871050240}}
 }
 Крижановский А.А. Программа "Превращение флагов"
