item desc and red oval in del all rows

--- a/app_inventor/lessons/db_google_fusion.tex
+++ b/app_inventor/lessons/db_google_fusion.tex
@@ -170,14 +170,15 @@
 
 \newthought{К вводу данных} можно уже и приступить. 
 Определим для себя, какие столбцы нам нужны для использования таблицы 
-в главе \ref{ch:draughts-moves} <<Превращение флагов>> (с.~\pageref{ch:draughts-moves}).
+в главе \ref{ch:draughts-moves} <<Превращение флагов>> (с.~\pageref{ch:draughts-moves}). 
+Нужны четыре столбца:
 
-Текстовое поле для названия страны (например, ``Russia'', ``Gabon''). 
+\begin{description}
+    \item[country] -- текстовое поле для названия страны (например, ``Russia'', ``Gabon''),
+    \item[row] -- числовое поле для указания номера полоски цвета, считаем сверху вниз, отсчёт начинаем с единицы,
+    \item[hex-triple?] -- числовое? поле для указания RGB-цвета,
+    \item[color-name] -- текстовое поле для названия цвета, служит human-readable комментарием к RGB-коду.
+\end{itemize}
 
-Числовое поле для указания номера полоски цвета, считаем сверху вниз, отсчёт начинаем с единицы.
-
-Числовое? поле для указания RGB-цвета.
-
-Текстовое поле для названия цвета. Комментарий с названием цвета для RGB-кода.
 
 
