--- a/app_inventor/lessons/db_google_fusion.tex
+++ b/app_inventor/lessons/db_google_fusion.tex
@@ -177,7 +177,7 @@
     \item[country] -- текстовое поле для названия страны (например, ``Russia'', ``Gabon''),
     \item[row] -- числовое поле для указания номера полоски цвета, считаем сверху вниз, отсчёт начинаем с единицы,
     \item[hex-triple?] -- числовое? поле для указания RGB-цвета,
-    \item[color-name] -- текстовое поле для названия цвета, служит human-readable комментарием к RGB-коду.
+    \item[color-name] -- текстовое поле для названия цвета, служит human-readable комментарием к RGB-коду!
 \end{itemize}
 
 
