--- a/app_inventor/ai1references.bib
+++ b/app_inventor/ai1references.bib
@@ -60,7 +60,7 @@
 
 @misc{MitManyScreens,
     language = {english},
-    author = {Mit App Inventor},
+    author = {MIT App Inventor},
     title = {Building Apps with many Screens},
     year = {2012},
     howpublished = {\url{http://ai2.appinventor.mit.edu/reference/other/manyscreens.html}}
