+ Added a text of the chapter "Guess Numbers". - Deleted errors.

--- a/app_inventor/ai1references.bib
+++ b/app_inventor/ai1references.bib
@@ -41,8 +41,6 @@
 	title = {Леонтий Филиппович Магницкий и его арифметика},
 	publisher = {Типография О. Л. Сомовой},
 	year = {1914},
-%	??? edition = {2-3},
-%	??? isbn = {978-5-458-27244-5}
 }
 
 % {Kamriani F. and Roy K.}
@@ -71,6 +69,5 @@
     author = {Панфилова О.С.},
     title = {Программа <<Угадыватель чисел>>},
     year = {2018},
-    howpublished = {\url{http://ai2.appinventor.mit.edu/?locale=en&galleryId=4596770871050240}}
+    howpublished = {\url{http://ai2.appinventor.mit.edu/?galleryId=5558160511336448}}
 }
-Крижановский А.А. Программа "Превращение флагов"
