--- a/app_inventor/lessons/db_google_fusion.tex
+++ b/app_inventor/lessons/db_google_fusion.tex
@@ -178,7 +178,7 @@
     \item[row] -- числовое поле для указания номера полоски цвета, считаем сверху вниз, отсчёт начинаем с единицы,
     \item[hex-triple?] -- числовое? поле для указания RGB-цвета,
     \item[color-name] -- текстовое поле для названия цвета, служит human-readable комментарием к RGB-коду!
-\end{itemize}
+\end{description}
 
 
 
