--- a/app_inventor/ai1references.bib
+++ b/app_inventor/ai1references.bib
@@ -63,20 +63,15 @@
     year = {2012},
     howpublished = {\url{http://ai2.appinventor.mit.edu/reference/other/manyscreens.html}}
 }
-@misc{CaseTypes,
-    language = {english},
-    author = {Chase Adams},
-    title = {Most Common Programming Case Types},
-    year = {2018},
-    howpublished = {\url{https://dev.to/chaseadamsio/most-common-programming-case-types-30h9}}
-}
-@misc{CaseTypesRu,
+
+@misc{Chase2018,
     language = {russian},
-    author = {Редакция techrocks.ru},
+    author = {Чейз Адамс},
     title = {Стили написания составных слов в программировании},
     year = {2018},
     howpublished = {\url{https://techrocks.ru/2018/08/09/most-common-programming-case-types/}}
 }
+
 @misc{PanfilovaApp,
     language = {russian},
     author = {Панфилова О.С.},
